--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.glip.mineevproject2"
+        applicationId "net.lesson1_2"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -25,4 +26,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.firebaseui:firebase-ui-auth:3.2.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
